cosmetic(pie-notification): DSW-3642 fix padding on narrow screen

--- a/packages/components/pie-notification/src/notification.scss
+++ b/packages/components/pie-notification/src/notification.scss
@@ -131,9 +131,12 @@
         &.c-notification-footer--stacked {
             @include media('<md') {
                 flex-direction: column-reverse;
-                gap: 0;
+                gap: var(--dt-spacing-c);
+                margin-block-start: var(--dt-spacing-b);
 
+                pie-button,
                 ::slotted(pie-button) {
+                    margin-block-start: 0;
                     --btn-inline-size: 100%;
                 }
             }
